"Использовать метод .toList();"